# local-inferbench

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/local_inferbench/: __init__.py  benchmark.py  cli.py  config.py  hardware.py  scoring.py  storage.py
src/local_inferbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/local_inferbench/adapters/: base.py  ollama.py
src/local_inferbench/prompts/: __init__.py  quick.yaml  registry.py  standard.yaml
tests/: conftest.py  test_adapters.py  test_benchmark.py  test_hardware.py  test_metrics.py  test_recommend.py  test_scoring.py  test_storage.py
