[build-system]
requires = ["setuptools>=68.0,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "local-inferbench"
version = "0.3.0"
description = "A benchmarking framework for Ollama models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Devin Hill" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.25",
    "psutil>=5.9",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/iamdevinhill/local-inferbench"
Repository = "https://github.com/iamdevinhill/local-inferbench"
"Bug Tracker" = "https://github.com/iamdevinhill/local-inferbench/issues"
PyPI = "https://pypi.org/project/local-inferbench/"

[project.optional-dependencies]
gpu = ["nvidia-ml-py>=12.0"]
pandas = ["pandas>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = ["local-inferbench[gpu,pandas,dev]"]

[project.scripts]
inferbench = "local_inferbench.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
local_inferbench = ["py.typed", "prompts/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
